--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # We are commiting the compressed versions of these, and unpacking on install.
-lib/model_files/RF_FAULT_20210715.pkl
-lib/model_files/RF_CAVITY_20210715.pkl
 test/test_results.txt
+test/test-data/*
 
 # IDE directory
 .idea/
@@ -22,7 +21,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+#lib/
 lib64/
 parts/
 sdist/
